# libwas

./: .gitignore  LICENSE.txt  Makefile.am  README.rst  acinclude.m4  autogen.sh  configure.ac  libcm4all-was-apreq.ld  libcm4all-was-apreq.pc.in  libcm4all-was-protocol.pc.in  libcm4all-was-simple.ld  libcm4all-was-simple.pc.in  libcm4all-was-xios.ld  libcm4all-was-xios.pc.in  meson.build  meson_options.txt
.github/workflows/: build.yml
debian/: .gitignore  changelog  cm4all-was-examples.install  control  copyright  libcm4all-was-apreq-dev.install  libcm4all-was-apreq-dev.install.in  libcm4all-was-apreq1.install  libcm4all-was-dev.install  libcm4all-was-protocol-dev.docs  libcm4all-was-protocol-dev.install  libcm4all-was-simple-dev.install  libcm4all-was-simple-dev.install.in  libcm4all-was-simple0.install  libcm4all-was-simple1.install  libcm4all-was-simple1.shlibs  libcm4all-was-xios-dev.install  libcm4all-was-xios0.install  libcm4all-was-xios1.install  rules  shlibs.local
doc/: conf.py  index.rst  was.tex
examples/: hello.c  meson.build  mirror.c  random.c
include/was/: apreq.h  compiler.h  istub.h  method.h  multi.h  ostub.h  protocol.h  simple.h  status.h
m4/: apreq2.m4
src/: bucket.c  bucket.h  istub.c  iterator.c  iterator.cxx  iterator.hxx  multi.cxx  ostub.c  parser.c  simple.c  simple.cxx
src/util/: Unaligned.hxx
subprojects/: .gitignore  libcm4all-http.wrap
test/: TestWasSimple.cxx  meson.build
