executable('hello',
  'hello.c',
  install: true,
  include_directories: inc,
  dependencies: [
    libhttp,
    libwas_simple_dep
  ])

executable('random',
  'random.c',
  install: true,
  include_directories: inc,
  dependencies: [
    libhttp,
    libwas_simple_dep
  ])

executable('mirror',
  'mirror.c',
  install: true,
  include_directories: inc,
  dependencies: [
    libhttp,
    libwas_simple_dep
  ])
